updated classes in html and changes some css

--- a/style.css
+++ b/style.css
@@ -27,20 +27,20 @@
 
 #output1
 {
-    background: yellow;
+    background: white;
     font-weight: bold;
     text-align: center;
     
 }
 #output2
 {
-    background: yellow;
+    background: white;
     font-weight: bold;
     text-align: center;
 }
 #output3
 {
-    background: yellow;
+    background: white;
     font-weight: bold;
     text-align: center;
 }
